Cleanups suggested by FindBugs:  Made public statics final.  Removed unused vars.  Removed redundant toString(), new String(String).  Made inner classes static (nested).  Removed uses of Serializable.  Added hashCode() wherever equals() is defined.